fix(chapter-card): close card and table were overlapping

--- a/src/public/styles/styles.css
+++ b/src/public/styles/styles.css
@@ -109,7 +109,7 @@
 }
 
 .chapter-modal-content {
-  height: 20.313rem;
+  min-height: 26.4rem;
 }
 
 .temp-img {
